# picokey

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.ja.md  README.md  SECURITY.md  pico_sdk_import.cmake
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml
firmware/: picokey.uf2
src/: btstack_config.h  btstack_hooks.c  compat_stdio.c  main.c  picokey_bt_hooks.h  picokey_hids_hooks.c  picokey_pairing_monitor.c  picokey_pairing_monitor.h  picokey_sm_hooks.c  picokey_usb_hid.c  picokey_usb_hid.h  picokey_usb_reports.h  retarget_locks.c  tusb_config.h  usb_descriptors.c
